--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -48,6 +48,7 @@ But then $G\wr_X H$ acts on the connected median graph $Y\times X$ by
 	\bigl((g_x)_{x\in X},h\bigr).(y.x)=(g_x.y,h.x).
 \]
 \todo[inline]{Check that the above is indeed an action}
+\todo[inline]{Attention, en général l'action ci-dessus ne respecte pas la structure de graphe de $Y\times X$ !!! ;(}
 But then the orbit of $(y,x_0)$ is unbounded.
 Indeed, it contains $(g_{x_0},1).(y,x_0)=(g.y,x_0)$ for every $g\in G$. And since all the $(g.y,x_0)_{g\in G}$ are in the same slice, the distance between them in the same as the distance between the $(g.y)_{g\in G}$.
 
