--- a/Property FW and wreath products/Property_FW_and_wreath_products.tex
+++ b/Property FW and wreath products/Property_FW_and_wreath_products.tex
@@ -223,7 +223,7 @@ This is a transitive action. All the edges of type $(\delta_{x_0}^s, 0)$ are loo
 \end{proof}
 
 
-\section{Stuff}
+\section{Median graphs}
 \input{median.tex}
 \bibliography{biblio.bib}
 \bibliographystyle{abbrv}
