Property FW and wreath products
Fichier median à jour, conflits gérés

--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -70,7 +70,7 @@ The group $\otimes_X G$ has FW if and only if $X$ is finite and $G$ has FW.
 \end{cor}
 
 We finally characterize which wreath products do have FW.
-\begin{prop}
+\begin{prop}\label{Prop:Median}
 Let $G$ be a non-trivial group.
 Then the group $G\wr_X H$ has FW if and only if both $G$ and $H$ have FW and $X$ is finite.
 \end{prop}
@@ -107,5 +107,6 @@ Then both Lemma \ref{Lemma:Semidirect} and Corollary \ref{Cor:Wreath} are true f
 
 Example of such properties P are: property FW, property FA (every action on a tree has bounded orbits) or property FH (every isometric action on a real Hilbert space has bounded orbits) which for countable group is equivalent to Kazdhan's property (T).
 \end{rem}
+\todo[inline]{Dire qqch (même juste références) sur l'équivalent de la proposition \ref{Prop:Median} pour FA et FH}
 
 \todo[inline]{Regarder le cas PW, Haagerup,... i.e. action propre. Rappel: une action isométrique de $G$ est propre si pour tout $x$ (de manière équivalente il existe $x$), pour tout $r\in \mathbf R$ l'ensemble $\{g\in G\,|\,d(x,g.x)\}$ est fini.}
