Property FW and wreath products
remark -> Remark dans le fichier principal

--- a/Property FW and wreath products/Property_FW_and_wreath_products.tex
+++ b/Property FW and wreath products/Property_FW_and_wreath_products.tex
@@ -39,7 +39,7 @@
 \newtheorem{exmp}[lem]{Example}
 \newtheorem{fact}[lem]{Fact}
 \newtheorem{notation}[lem]{Notation}
-\newtheorem{rem}[lem]{remark}
+\newtheorem{rem}[lem]{Remark}
 \newtheorem{scholion}[lem]{Scholion}
 \newtheorem{exo}{Exercise}
 %
