--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -1,25 +1,30 @@
 %!TEX root = Property_FW_and_wreath_products.tex
-In this section, we will investigate the FW property via the action of groups on median graphs.
+In this section, we will investigate the property FW via the action of groups on median graphs.
 
 For $u$ and $v$ two vertices of a connected graph $\mathcal G$, we define the total interval $[u,v]$ as the set of vertices that lies on some shortest path between $u$ and $v$.
-A connected graph $\mathcal G$ is \emph{median} if for triple of distinct vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consist of a unique vertex, denoted $m(u,v,w)$.
+A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$.
 A graph is median if each of its connected components is median.
 
-A simple verification shows that if $\mathcal G$ and $\mathcal H$ are both median graph, then their cartesian product is also median.
+A simple verification shows that if $\mathcal G$ and $\mathcal H$ are both median graphs, then their cartesian product is also median.
 
+The following example will be fundamental for us. Indeed
 \begin{exmp}
-Let $X$ be a subset and $\mathcal P_f(X)$ the set of all its finite subsets.
+Let $X$ be a set and let  $\mathcal P_f(X)$ be the set of all its finite subsets.
 Define a graph structure on $\mathcal P_f(X)$ by putting an edge between $E$ and $F$ if and only if $\#(E\Delta F)=1$, where $\Delta$ is the symmetric difference.
 Therefore, the distance between two subsets $E$ and $F$ is $E\Delta F$, while $[E,F]$ consist of all subsets of $X$ that both contain $E\cap F$ and are contained in $E\cup F$.
-In particular $\mathcal P_f(X)$ is a connected median, with $m(D,E;F)$ being the set of all elements belonging to at least two of $D$, $E$ and $F$. In other words,
+In particular $\mathcal P_f(X)$ is a connected median graph, with $m(D,E;F)$ being the set of all elements belonging to at least two of $D$, $E$ and $F$. In other words,
 $m(D,E;F)=(D\cap E)\cup(D\cap F)\cup(E\cap F)$.
 
 The same construction endows $\mathcal P(X)$ the set of all subsets of $X$ with a structure of median graph, where the connected component of $E$ consists of all $F$ such that $E\Delta F$ is finite.
-
-Any action of a group $G$ on a set $X$ naturally extend to an action of $G$ on $\mathcal P_f(X)$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
 \end{exmp}
 
-Building on this example, we obtain that no infinite sum of groups has the property FW.
+The graphs $\mathcal P_f(X)$ are exactly the hypercube and it turns out \cite{}\todo{Put refs} that every connected median graph is a retract of some $\mathcal P_f(X)$.
+
+These graphs will be fundamental for us due to the following fact.
+Any action of a group $G$ on a set $X$ naturally extends to an action of $G$ on $\mathcal P_f(X)$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
+
+
+Building on this, we obtain that no infinite sum of groups has the property FW.
 \begin{lem}\label{Lemma:Sum}
 An infinite sum of non-trivial groups $G=\bigoplus_{i=1}^\infty G_i$ does not have FW.
 \end{lem}
@@ -30,6 +35,15 @@ Therefore, we have an action of $G$ on the connected median graph $\mathcal P_f(
 For every $i$, choose a non-trivial $g_i\in G_i$.
 Then the orbit of the vertex $\{1_{G_1},\dots, 1_{G_n}\}$ contains the point $\{g_1,\dots, g_n\}$ which is at distance $2n$ of $\{1_{G_1},\dots, 1_{G_n}\}$.
 That is the action of $G$ on $\mathcal P_f(X)$ has unbounded orbits.
+\end{proof}
+
+\begin{lem}\label{Lemma:Subgroup}\todo{Mettre une phrase d'intro; ce n'est pas nouveau}
+Let $G$ be a group and $H$ be a finite index subgroup.
+If $H$ has FW, then so does~$G$.
+\end{lem}
+\begin{proof}
+Suppose that $G$ does not have FW and let $X$ be a connected median graph on which $G$ acts with unbounded orbits.
+Then $H$ acts on $X$ and every $G$-orbit is a union of at most $[G:H]$ orbit. This directly implies that $H$ acts on $X$ with unbounded orbit and that $H$ does not have FW.
 \end{proof}
 
 We also have the following easy result on semi-direct products:
@@ -64,7 +78,7 @@ If $G$ and $H$ have FW and $H$ acts on a finite set $X$, then $G\wr_X H$ has FW.
 \end{cor}
 
 
-It also follow from Lemmas \ref{Lemma:Sum} and \ref{Lemma:Semidirect} that
+It also follows from Lemmas \ref{Lemma:Sum} and \ref{Lemma:Semidirect} that
 \begin{cor}
 The group $\otimes_X G$ has FW if and only if $X$ is finite and $G$ has FW.
 \end{cor}
@@ -101,10 +115,10 @@ The orbit of $v$ contains the point $(\{g_1,\dots, g_n\},\emptyset)$ which is at
 That is the action of $G\wr_X H$ on $\mathcal P_f(\bigsqcup_XG)\times \mathcal P_f(X)$ has unbounded orbits and $G\wr_X H$ has not FW.
 \end{proof}
 
-We conclude this section by the following important remark that some of the above result applies in a more generality.
+We conclude this section by the following important remark that some of the above results apply in a more general context.
 \begin{rem}
 Let Q be a property of metric spaces (for example \emph{be a connected median graph}) and P be the group property: \emph{Every $G$-action on a space with Q has bounded orbits.}
-Then both Lemma \ref{Lemma:Semidirect} and Corollary \ref{Cor:Wreath} are true for groups with P.
+Then Lemmas \ref{Lemma:Subgroup} and \ref{Lemma:Semidirect} as well as Corollary \ref{Cor:Wreath} are true for groups with P.
 
 Example of such properties P are: property FW, property FA (every action on a tree has bounded orbits) or property FH (every isometric action on a real Hilbert space has bounded orbits) which for countable group is equivalent to Kazdhan's property (T).
 \end{rem}
