--- a/Property FW and wreath products/Property_FW_and_wreath_products.tex
+++ b/Property FW and wreath products/Property_FW_and_wreath_products.tex
@@ -91,7 +91,7 @@
 \section{Introduction}
 %
 The property FW was introduced by de Cornullier. It is a fixed point property for the action on wall spaces (for a detailed treatment of this property see \cite{Cornulier2013}). For discrete groups, this property is implied by the Kazhdan property (T). The behavior of the Kazhdan Property (T) with the wreath product is well known: 
-\begin{thm}[\cite{Cherix2004,Neuhauser2005a}]
+\begin{thm}[\cite{Cherix2004,Neuhauser2005a}] \label{T:Wreath_prop_T}
 Let $G,H$ be two discrete groups and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property (T) if and only if $G$ and $H$ have the property (T) and if $X$ is finite.
 \end{thm}
 %
