--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -139,7 +139,7 @@ Let $G,H$ be discret groups and $X$ a $H$-set. Then the wreath product $G \wr_X 
 The proof is a direct application of the equivalence of the properties (FH) and (T) for discrete groups (see \cite{Bekka2008}) and of the Theorem \ref{T:Wreath_prop_T} .
 %
 \begin{thm}[\cite{Cornulier2011}]
-Let $G,H$ be two groups and $X$ be a non-empty $H$ set which only a finite number of orbits and without fixed point. Then the wreath product $G \wr_X H$ has the property (FA) if and only if $H$ has the property (FA) and if $G$ is a group with a finite abelianization which cannot be expressed as an union of proper increasing sequence of subgroups.
+Let $G,H$ be two groups and $X$ be a non-empty $H$ set which has only a finite number of orbits and no fixed point. Then the wreath product $G \wr_X H$ has the property (FA) if and only if $H$ has the property (FA) and if $G$ is a group with a finite abelianization, which cannot be expressed as an union of proper increasing sequence of subgroups.
 \end{thm}
 \todo[inline]{regarder si c'est plus fort que $H$ possède la propriété (FA) et le lien avec le cardinal de $X$}
 
