Property FW and wreath product
Une ligne de changée, mais github me fait chier

--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -70,7 +70,7 @@ Suppose that $G$ has FW and let $X$ be a non-empty connected median graph on whi
 Then $G$ acts on $X$ by $g.x\coloneqq h.x$ where $g=nh$ with $n\in N$ and $h\in H$.
 By assumption, the action of $G$ on $X$ has bounded orbits and so does the action of $H$.
 
-On the other hand, suppose that $G$ does not have FW and let $X$ be a non-empty connected median graph on which $G$ acts.
+On the other hand, suppose that $N$ and $H$ have FW and let $X$ be a non-empty connected median graph on which $G$ acts.
 Then both $N$ and $H$ acts on $X$, with orbits bounded respectively by $d_N$ and $d_H$.
 Now, for every $x\in X$ and $g\in G$, there is $n\in N$ and $h\in H$ such that $g=nh$ ans thus $g.x=n.(h.x)$ is at distance at most $d_N+d_H$ from $x$.
 \end{proof}
