--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -38,7 +38,8 @@ Then the orbit of the vertex $\{1_{G_1},\dots, 1_{G_n}\}$ contains the point $\{
 That is the action of $G$ on $\mathcal P_f(X)$ has unbounded orbits.
 \end{proof}
 
-\begin{lem}\label{Lemma:Subgroup}\todo{Mettre une phrase d'intro; ce n'est pas nouveau}
+\begin{lem}\label{Lemma:Subgroup}
+\todo{Mettre une phrase d'intro; ce n'est pas nouveau}
 Let $G$ be a group and $H$ be a finite index subgroup.
 If $H$ has FW, then so does~$G$.
 \end{lem}
